@@ -90,9 +90,8 @@
 - better support for stupid margin terminals. strcmp for cons25 sucks, how can
   these be autodetected?
 - refer to windows by name etc (duplicates? fnmatch?)
-- n/p repeat is annoying, turn off
-- repeat should be a key flag and should be configurable (bind -r)
 
+- document repeat behaviour and -r on bind-key
 - document status-keys
 - document break-pane
 - document -8 flag
